--- a/styles/abstracts/variables/_breakpoints.scss
+++ b/styles/abstracts/variables/_breakpoints.scss
@@ -3,3 +3,6 @@ $screen-sm: 600px !default;
 $screen-md: 960px !default;
 $screen-lg: 1280px !default;
 $screen-xl: 1920px !default;
+
+$screen-xs-max: $screen-sm - 1px !default;
+
